--- a/tools/doc/package.json
+++ b/tools/doc/package.json
@@ -7,6 +7,7 @@
     "node": ">=6"
   },
   "dependencies": {
+    "marked": "^0.4.0",
     "rehype-raw": "^2.0.0",
     "rehype-stringify": "^3.0.0",
     "remark-html": "^7.0.0",
