--- a/tools/node-lint-md-cli-rollup/package.json
+++ b/tools/node-lint-md-cli-rollup/package.json
@@ -5,15 +5,15 @@
   "devDependencies": {
     "rollup": "^0.55.5",
     "rollup-plugin-commonjs": "^8.0.2",
-    "rollup-plugin-json": "^2.3.0",
-    "rollup-plugin-node-resolve": "^3.0.0"
+    "rollup-plugin-json": "^2.3.1",
+    "rollup-plugin-node-resolve": "^3.4.0"
   },
   "dependencies": {
     "markdown-extensions": "^1.1.0",
     "remark": "^8.0.0",
-    "remark-lint": "^6.0.0",
-    "remark-preset-lint-node": "^1.0.3",
-    "unified-args": "^4.0.0",
+    "remark-lint": "^6.0.2",
+    "remark-preset-lint-node": "./remark-preset-lint-node",
+    "unified-args": "^6.0.0",
     "unified-engine": "^5.1.0"
   },
   "scripts": {
