tools: `make lint-md-rollup` & checkin `lint-md.js`
PR-URL: https://github.com/nodejs/node/pull/20109
Reviewed-By: James M Snell <jasnell@gmail.com>
Reviewed-By: Gus Caplan <me@gus.host>
Reviewed-By: Ruben Bridgewater <ruben@bridgewater.de>

--- a/.eslintignore
+++ b/.eslintignore
@@ -7,6 +7,7 @@ test/es-module/test-esm-dynamic-import.js
 test/fixtures
 test/message/esm_display_syntax_error.mjs
 tools/icu
+tools/lint-md.js
 tools/node-lint-md-cli-rollup/dist
 tools/remark-*
 benchmark/tmp
