REMOVE ME: PTP: include libuv changes so people can try prototype
This commit should be reverted before merging the PR.

The Node.js PR should follow a separate PR bumping the libuv version
to one with my libuv PR.

--- a/deps/uv/CMakeLists.txt
+++ b/deps/uv/CMakeLists.txt
@@ -12,6 +12,7 @@ elseif(CMAKE_C_COMPILER_ID MATCHES "AppleClang|Clang|GNU")
 endif()
 
 set(uv_sources
+    src/executor.c
     src/fs-poll.c
     src/inet.c
     src/threadpool.c
@@ -139,8 +140,8 @@ set(uv_test_sources
     test/test-tcp-writealot.c
     test/test-thread-equal.c
     test/test-thread.c
-    test/test-threadpool-cancel.c
-    test/test-threadpool.c
+    test/test-executor-cancel.c
+    test/test-executor.c
     test/test-timer-again.c
     test/test-timer-from-check.c
     test/test-timer.c
