fixup! build: implement a Commit Queue in Actions
Co-authored-by: Anna Henningsen <github@addaleax.net>

--- a/.github/workflows/commit-queue.yml
+++ b/.github/workflows/commit-queue.yml
@@ -8,7 +8,7 @@ name: Commit Queue
 
 on:
   # `schedule` event is used instead of `pull_request` because when a
-  # `pull_requesst` event is triggered on a PR from a fork, GITHUB_TOKEN will
+  # `pull_request` event is triggered on a PR from a fork, GITHUB_TOKEN will
   # be read-only, and the Action won't have access to any other repository
   # secrets, which it needs to access Jenkins API.
   schedule:
