--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -77,6 +77,8 @@
 
 /doc/api/modules.md @nodejs/modules
 /doc/api/esm.md @nodejs/modules
+/doc/api/module.md @nodejs/modules
+/doc/api/packages.md @nodejs/modules
 /lib/module.js @nodejs/modules
 /lib/internal/modules/* @nodejs/modules
 /lib/internal/bootstrap/loaders.js @nodejs/modules
