--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -1,13 +1,17 @@
 name: test-linux
 
 on:
-  pull_request:
   push:
     branches:
       - master
       - canary
       - v[0-9]+.x-staging
       - v[0-9]+.x
+    paths-ignore:
+      - 'doc/**'
+  pull_request:
+    paths-ignore:
+      - 'doc/**'
 
 env:
   PYTHON_VERSION: 3.8
