tools: add pythonenv to .gitignore
GitHub Codespaces installs a copy of Python 3.8 in the repository.

PR-URL: https://github.com/nodejs/node/pull/35389
Reviewed-By: Jiawen Geng <technicalcute@gmail.com>
Reviewed-By: Luigi Pinca <luigipinca@gmail.com>
Reviewed-By: Anna Henningsen <anna@addaleax.net>
Reviewed-By: Rich Trott <rtrott@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,9 @@
 /out
 /*.msi
 /*.wixpdb
+/*.qlog
+# For GitHub Codespaces
+/pythonenv*
 
 # === Rules for artifacts of `./configure` ===
 /icu_config.gypi
