--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -24,6 +24,12 @@
 /doc/guides/offboarding.md @nodejs/tsc
 /doc/guides/onboarding-extras.md @nodejs/tsc
 
+# streams
+
+/lib/_stream* @nodejs/streams
+/lib/stream.js @nodejs/streams
+/lib/internal/streams/* @nodejs/streams
+
 # net
 
 /deps/cares @nodejs/net
