--- a/.github/workflows/coverage-windows.yml
+++ b/.github/workflows/coverage-windows.yml
@@ -1,4 +1,4 @@
-name: coverage-linux
+name: coverage-windows
 
 on:
   pull_request:
@@ -11,30 +11,32 @@ env:
   FLAKY_TESTS: dontcare
 
 jobs:
-  # TODO(bcoe): add support for C++ coverage.
-  coverage-linux:
-    runs-on: ubuntu-latest
+  coverage-windows:
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ env.PYTHON_VERSION }}
         uses: actions/setup-python@v2
         with:
           python-version: ${{ env.PYTHON_VERSION }}
+      - name: Install deps
+        run: choco install nasm
       - name: Environment Information
         run: npx envinfo
       - name: Build
-        run: make build-ci -j2 V=1 CONFIG_FLAGS="--error-on-warn"
-      # TODO(bcoe): fix the couple tests that fail with the inspector enabled.
-      # The cause is most likely coverage's use of the inspector.
+        run: ./vcbuild.bat experimental-quic
+      # TODO(bcoe): investigate tests that fail with coverage enabled
+      # on Windows.
       - name: Test
-        run: NODE_V8_COVERAGE=coverage/tmp make run-ci -j2 V=1 TEST_CI_ARGS="-p dots" || exit 0
+        run: ./vcbuild.bat test-ci-js; node -e 'process.exit(0)'
+        env:
+          NODE_V8_COVERAGE: ./coverage/tmp
       - name: Report
-        run: npx c8 report --check-coverage
-      - name: Output file count
-        run: ls -l coverage/tmp/ | wc -l
+        run: npx c8 report
       - name: Clean tmp
-        run: rm -rf coverage/tmp
+        run: npx rimraf ./coverage/tmp
       - name: Upload
         uses: codecov/codecov-action@v1
         with:
           directory: ./coverage
+
