--- a/.github/workflows/coverage-linux.yml
+++ b/.github/workflows/coverage-linux.yml
@@ -11,7 +11,6 @@ env:
   FLAKY_TESTS: dontcare
 
 jobs:
-  # TODO(bcoe): add support for C++ coverage.
   coverage-linux:
     runs-on: ubuntu-latest
     steps:
@@ -23,13 +22,18 @@ jobs:
       - name: Environment Information
         run: npx envinfo
       - name: Build
-        run: make build-ci -j2 V=1 CONFIG_FLAGS="--error-on-warn"
+        run: make build-ci -j2 V=1 CONFIG_FLAGS="--error-on-warn --coverage"
       # TODO(bcoe): fix the couple tests that fail with the inspector enabled.
       # The cause is most likely coverage's use of the inspector.
       - name: Test
         run: NODE_V8_COVERAGE=coverage/tmp make run-ci -j2 V=1 TEST_CI_ARGS="-p dots" || exit 0
-      - name: Report
+      - name: Report js
         run: npx c8 report --check-coverage
+      - name: Report gcov
+        run: cd out && ../gcovr/scripts/gcovr \
+          --gcov-exclude='.*\b(deps|usr|out|cctest|embedding)\b' -v \
+          -r Release/obj.target --xml -o ../coverage/coverage.xml \
+          --gcov-executable=gcov
       - name: Output file count
         run: ls -l coverage/tmp/ | wc -l
       - name: Clean tmp
