--- a/.github/workflows/coverage-linux.yml
+++ b/.github/workflows/coverage-linux.yml
@@ -39,8 +39,9 @@ jobs:
         run: cd out && ../gcovr/scripts/gcovr --gcov-exclude='.*\b(deps|usr|out|cctest|embedding)\b' -v -r Release/obj.target --xml -o ../coverage/coverage.xml --gcov-executable=gcov
       - name: Output file count
         run: ls -l coverage/tmp/ | wc -l
+      # Clean temporary output from gcov and c8, so that it's not uploaded:
       - name: Clean tmp
-        run: rm -rf coverage/tmp
+        run: rm -rf coverage/tmp && rm -rf out
       - name: Upload
         uses: codecov/codecov-action@v1
         with:
