--- a/.github/workflows/coverage-linux.yml
+++ b/.github/workflows/coverage-linux.yml
@@ -2,9 +2,19 @@ name: coverage-linux
 
 on:
   pull_request:
+    paths-ignore:
+      - 'doc/**'
+      - 'deps/**'
+      - 'benchmark/**'
+      - 'tools/**'
   push:
     branches:
       - master
+    paths-ignore:
+      - 'doc/**'
+      - 'deps/**'
+      - 'benchmark/**'
+      - 'tools/**'
 
 env:
   PYTHON_VERSION: 3.9
@@ -21,12 +31,8 @@ jobs:
           python-version: ${{ env.PYTHON_VERSION }}
       - name: Environment Information
         run: npx envinfo
-      - name: Clone gcovr reporter
-        run: git clone -b 3.4 --depth=1 --single-branch https://github.com/gcovr/gcovr.git
-      - name: Clone patch for gcovr
-        run: git clone --depth=1 --single-branch https://github.com/nodejs/build.git
-      - name: Patch gcovr
-        run: cd gcovr && patch -N -p1 < ../build/jenkins/scripts/coverage/gcovr-patches-3.4.diff
+      - name: Install gcovr
+        run: pip install gcovr
       - name: Build
         run: make build-ci -j2 V=1 CONFIG_FLAGS="--error-on-warn --coverage"
       # TODO(bcoe): fix the couple tests that fail with the inspector enabled.
@@ -36,7 +42,7 @@ jobs:
       - name: Report js
         run: npx c8 report --check-coverage
       - name: Report C++
-        run: cd out && ../gcovr/scripts/gcovr --gcov-exclude='.*\b(deps|usr|out|cctest|embedding)\b' -v -r Release/obj.target --xml -o ../coverage/coverage.xml --gcov-executable=gcov
+        run: cd out && gcovr --gcov-exclude='.*\b(deps|usr|out|cctest|embedding)\b' -v -r Release/obj.target --xml -o ../coverage/coverage.xml --filter=''
       - name: Output file count
         run: ls -l coverage/tmp/ | wc -l
       # Clean temporary output from gcov and c8, so that it's not uploaded:
