--- a/.github/workflows/coverage-linux.yml
+++ b/.github/workflows/coverage-linux.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Environment Information
         run: npx envinfo
       - name: Install gcovr
-        run: pip install gcovr
+        run: pip install gcovr==4.2
       - name: Build
         run: make build-ci -j2 V=1 CONFIG_FLAGS="--error-on-warn --coverage"
       # TODO(bcoe): fix the couple tests that fail with the inspector enabled.
@@ -42,7 +42,7 @@ jobs:
       - name: Report js
         run: npx c8 report --check-coverage
       - name: Report C++
-        run: cd out && gcovr --gcov-exclude='.*\b(deps|usr|out|cctest|embedding)\b' -v -r Release/obj.target --xml -o ../coverage/coverage.xml --filter=''
+        run: cd out && gcovr --gcov-exclude='.*\b(deps|usr|out|obj|cctest|embedding)\b' -v -r Release/obj.target --xml -o ../coverage/coverage.xml --filter='' --root=$(node -e "console.info(path.resolve(process.cwd(), '../'))")
       - name: Output file count
         run: ls -l coverage/tmp/ | wc -l
       # Clean temporary output from gcov and c8, so that it's not uploaded:
