build: add arm64 windows build to node-v8 repo

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -28,3 +28,19 @@ jobs:
         run: npx envinfo
       - name: Build
         run: ./vcbuild.bat experimental-quic
+
+  build-windows-arm64:
+    if: github.repository == 'nodejs/node-v8'
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python ${{ env.PYTHON_VERSION }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+      - name: Install deps
+        run: choco install nasm
+      - name: Environment Information
+        run: npx envinfo
+      - name: Build
+        run: ./vcbuild.bat arm64
