--- a/.github/workflows/build-tarball.yml
+++ b/.github/workflows/build-tarball.yml
@@ -7,6 +7,7 @@ on:
       - master
       - v[0-9]+.x-staging
       - v[0-9]+.x
+      - no-draft-workflow-with-branch
 
 env:
   FLAKY_TESTS: dontcare
