tools,lib: recommend using safe primordials
Make the linter recommend replacing `globalThis.Map` by
`primordials.SafeMap`, and similar for `Set`, `WeakSet`, and `WeakMap`.

--- a/lib/.eslintrc.yaml
+++ b/lib/.eslintrc.yaml
@@ -57,6 +57,7 @@ rules:
       into: Number
     - name: JSON
     - name: Map
+      into: Safe
     - name: Math
     - name: Number
     - name: Object
@@ -70,6 +71,7 @@ rules:
     - name: Reflect
     - name: RegExp
     - name: Set
+      into: Safe
     - name: String
     - name: Symbol
     - name: SyntaxError
@@ -80,7 +82,9 @@ rules:
     - name: Uint8ClampedArray
     - name: URIError
     - name: WeakMap
+      into: Safe
     - name: WeakSet
+      into: Safe
 globals:
   Intl: false
   # Parameters passed to internal modules
