deps: V8: restore compatibility with 8.6
Revert "[unwinder] Delete the old unwinder API"
Refs: https://github.com/v8/v8/commit/9c5eed71c75112beaae65f7dcd179068752acc64

--- a/deps/v8/test/cctest/BUILD.gn
+++ b/deps/v8/test/cctest/BUILD.gn
@@ -274,6 +274,7 @@ v8_source_set("cctest_sources") {
     "test-unboxed-doubles.cc",
     "test-unscopables-hidden-prototype.cc",
     "test-unwinder-code-pages.cc",
+    "test-unwinder.cc",
     "test-usecounters.cc",
     "test-utils.cc",
     "test-version.cc",
