tool: disable new-lines rule checking

--- a/.yamllint.yaml
+++ b/.yamllint.yaml
@@ -31,6 +31,8 @@ rules:
 
   line-length: disable
 
+  new-lines: disable
+
   quoted-strings:
     quote-type: single
     required: only-when-needed
