--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,4 @@ deps/npm/bin/npx text eol=lf
 deps/corepack/shims/corepack text eol=lf
 tools/msvs/find_python.cmd text eol=crlf
 doc/**/*.md text eol=lf
+*.yaml text eol=lf
