--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@ deps/corepack/shims/corepack text eol=lf
 tools/msvs/find_python.cmd text eol=crlf
 doc/**/*.md text eol=lf
 *.yaml text eol=lf
+*.yml text eol=lf
