fixup! fixup! workflow: adjust github env for ubsan options

--- a/.github/workflows/test-ubsan.yml
+++ b/.github/workflows/test-ubsan.yml
@@ -50,16 +50,13 @@ jobs:
           persist-credentials: false
       - name: Store suppressions path
         run: |
-          echo "UBSAN_OPTIONS=$GITHUB_WORKSPACE/suppressions.supp" >> $GITHUB_ENV
+          echo "UBSAN_OPTIONS=suppressions=$GITHUB_WORKSPACE/suppressions.supp" >> $GITHUB_ENV
       - name: Set up Python ${{ env.PYTHON_VERSION }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ env.PYTHON_VERSION }}
       - name: Environment Information
         run: npx envinfo
-      - name: Debug
-        run: |
-          echo "$UBSAN_OPTIONS"
       - name: Build
         run: make build-ci -j2 V=1
       - name: Test
