--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
-{
-  "name": "Node.js Core Developer Environment",
-  "extensions": [
+{  
+  "name": "hitesh developers",
+  "extensions": [ 
     "github.vscode-pull-request-github",
     "ms-vsliveshare.vsliveshare",
     "vscode-icons-team.vscode-icons",
