--- a/deps/v8/BUILD.gn
+++ b/deps/v8/BUILD.gn
@@ -1697,6 +1697,20 @@ config("toolchain") {
       # Fix build with older versions of GCC
       # Ported from v8 bazel: https://crrev.com/c/3368869
       "-Wno-stringop-overflow",
+
+      # Fix a number of bogus errors with gcc12
+      # TODO(miladfarca): re-evaluate for future gcc upgrades
+      # https://gcc.gnu.org/bugzilla/show_bug.cgi?id=111499
+      "-Wno-stringop-overread",
+
+      # https://gcc.gnu.org/bugzilla/show_bug.cgi?id=104336
+      "-Wno-restrict",
+
+      # https://gcc.gnu.org/bugzilla/show_bug.cgi?id=105523
+      "-Wno-array-bounds",
+
+      # https://gcc.gnu.org/bugzilla/show_bug.cgi?id=108517
+      "-Wno-nonnull",
     ]
   }
 
