--- a/tools/msvs/props_4_ccache.props
+++ b/tools/msvs/props_4_ccache.props
@@ -1,4 +1,8 @@
 <Project>
+  <PropertyGroup>
+    <UseMultiToolTask>true</UseMultiToolTask>
+    <TrackFileAccess>false</TrackFileAccess>
+  </PropertyGroup>
   <ItemDefinitionGroup>
     <ClCompile>
       <!-- /Z7 of cl.exe, ref: https://learn.microsoft.com/en-us/cpp/build/reference/z7-zi-zi-debug-information-format -->
