--- a/deps/undici/src/package.json
+++ b/deps/undici/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "undici",
-  "version": "5.28.3",
+  "version": "5.28.4",
   "description": "An HTTP/1.1 client, written from scratch for Node.js",
   "homepage": "https://undici.nodejs.org",
   "bugs": {
@@ -115,15 +115,16 @@
     "husky": "^8.0.1",
     "import-fresh": "^3.3.0",
     "jest": "^29.0.2",
-    "jsdom": "^22.1.0",
+    "jsdom": "^23.0.0",
     "jsfuzz": "^1.0.15",
     "mocha": "^10.0.0",
+    "mockttp": "^3.9.2",
     "p-timeout": "^3.2.0",
     "pre-commit": "^1.2.2",
     "proxy": "^1.0.2",
     "proxyquire": "^2.1.3",
     "semver": "^7.5.4",
-    "sinon": "^16.1.0",
+    "sinon": "^17.0.1",
     "snazzy": "^9.0.0",
     "standard": "^17.0.0",
     "table": "^6.8.0",
