src: fix dotenv parsing commented env

--- a/test/fixtures/dotenv/valid.env
+++ b/test/fixtures/dotenv/valid.env
@@ -59,3 +59,7 @@ MULTI_NOT_VALID_QUOTE="
 MULTI_NOT_VALID=THIS
 IS NOT MULTILINE
 export EXAMPLE = ignore export
+
+#COMMENTED_ENV=should not shown
+#COMMENTED_ENV_FOLLOW_COMMENTED_ENV=should not shown
+#COMMENTED_ENV_FOLLOW_COMMENTED_ENV_2=should not shown
