fixup! tools: add lint rule to keep primordials in ASCII order

--- a/lib/.eslintrc.yaml
+++ b/lib/.eslintrc.yaml
@@ -268,6 +268,6 @@ globals:
   internalBinding: false
   primordials: false
 overrides:
-  - files: ["internal/per_context/primordials.js"]
+  - files: [internal/per_context/primordials.js]
     rules:
       node-core/alphabetize-primordials: [error, {enforceTopPosition: false}]
