--- a/.github/workflows/close-stale.yml
+++ b/.github/workflows/close-stale.yml
@@ -29,7 +29,7 @@ jobs:
     if: github.repository == 'nodejs/node'
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/stale@v9.0.0  # PR to add support for endDate
+      - uses: actions/stale@v9.0.0
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           
