--- a/deps/v8/BUILD.gn
+++ b/deps/v8/BUILD.gn
@@ -1603,6 +1603,10 @@ config("toolchain") {
 
       # https://gcc.gnu.org/bugzilla/show_bug.cgi?id=108517
       "-Wno-nonnull",
+
+      # Disable dangling pointer warnings, which are often false positives when
+      # using scopes.
+      "-Wno-dangling-pointer",
     ]
   }
 
