--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -50,4 +50,4 @@ jobs:
       - name: Environment Information
         run: npx envinfo
       - name: Build
-        run: ./vcbuild.bat
+        run: ./build.py
