--- a/.github/workflows/build-tarball.yml
+++ b/.github/workflows/build-tarball.yml
@@ -53,7 +53,7 @@ jobs:
           export DISTTYPE=nightly
           export DATESTRING=`date "+%Y-%m-%d"`
           export COMMIT=$(git rev-parse --short=10 "$GITHUB_SHA")
-          ./configure && make tar -j8 SKIP_XZ=1
+          ./configure && python3 build.py tar -j8
           mkdir tarballs
           mv *.tar.gz tarballs
       - name: Upload tarball artifact
@@ -90,8 +90,8 @@ jobs:
       - name: Build
         run: |
           cd $TAR_DIR
-          make build-ci -j4 V=1
+          python3 build.py build-ci -j4
       - name: Test
         run: |
           cd $TAR_DIR
-          make run-ci -j4 V=1 TEST_CI_ARGS="-p dots --node-args='--test-reporter=spec' --measure-flakiness 9"
+          TEST_CI_ARGS="-p dots --node-args='--test-reporter=spec' --measure-flakiness 9" python3 build.py run-ci -j4
