--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -34,10 +34,10 @@ jobs:
       - name: Environment Information
         run: npx envinfo
       - name: Build
-        run: NODE=$(command -v node) make doc-only
+        run: NODE=$(command -v node) python3 build.py doc-only
       - uses: actions/upload-artifact@5d5d22a31266ced268874388b861e4b58bb5c2f3  # v4.3.1
         with:
           name: docs
           path: out/doc
       - name: Test
-        run: NODE=$(command -v node) make test-doc-ci TEST_CI_ARGS="-p actions --node-args='--test-reporter=spec' --node-args='--test-reporter-destination=stdout' --measure-flakiness 9"
+        run: NODE=$(command -v node) python3 build.py test-doc-ci TEST_CI_ARGS="-p actions --node-args='--test-reporter=spec' --node-args='--test-reporter-destination=stdout' --measure-flakiness 9"
