test: allow recursive testing

--- a/test/.eslintrc.yaml
+++ b/test/.eslintrc.yaml
@@ -82,6 +82,8 @@ overrides:
       - es-module/*.mjs
       - parallel/*.js
       - parallel/*.mjs
+      - parallel/**/*.js
+      - parallel/**/*.mjs
       - sequential/*.js
       - sequential/*.mjs
     rules:
