fixup! workflow: use clang instead of gcc

--- a/.github/workflows/test-ubsan.yml
+++ b/.github/workflows/test-ubsan.yml
@@ -38,7 +38,7 @@ permissions:
 jobs:
   test-ubsan:
     if: github.event.pull_request.draft == false
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     env:
       CC: sccache clang
       CXX: sccache clang++
