--- a/.github/workflows/tsc-ping.yml
+++ b/.github/workflows/tsc-ping.yml
@@ -13,9 +13,7 @@ jobs:
         with:
           number: ${{ github.event.pull_request.number }}
           message: |
-            This PR modifies a directory typically controlled by
-            @nodejs/tsc should review this change before anything
-            can be merged.
+            /cc @nodejs/tsc
       - uses: actions-ecosystem/action-add-labels@v1
         with:
           labels: blocked
