--- a/.github/workflows/tsc-ping.yml
+++ b/.github/workflows/tsc-ping.yml
@@ -8,16 +8,17 @@ permissions:
   issues: write
 
 jobs:
-  ping-tsc:
+  add-comment:
     runs-on: ubuntu-latest
-    name: Ping the TSC
+    name: Add comment when a PR modifies a automation-controlled directory
     if: github.event.pull_request.user.login != 'nodejs-github-bot'  # Check if user is not the bot
     steps:
       - uses: marocchino/sticky-pull-request-comment@331f8f5b4215f0445d3c07b4967662a32a2d3e31  # v2.9.0
         with:
           number: ${{ github.event.pull_request.number }}
           message: |
-            /cc @nodejs/tsc
-      - uses: actions-ecosystem/action-add-labels@f146b04613e5d5b57ff227cba3db0954551fbc6a  # v1.1.0
-        with:
-          labels: blocked
+            This pull request appears to be modifying a file within a
+            directory that is typically controlled by automation.
+
+            Please carefully review and follow the [Collaborator Guide](https://github.com/nodejs/node/blob/HEAD/doc/contributing/collaborator-guide.md#code-reviews)
+            before approving this pull request.
